<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <Spinner android:id="@+id/Spinner01" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>
            <TableLayout android:id="@+id/TableLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:stretchColumns="1" android:gravity="center">
                <TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_ID"></TextView>
                    <EditText android:id="@+id/EditText01" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
                </TableRow>
                    <TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_content"></TextView>
                    <EditText android:id="@+id/EditText02" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
                </TableRow>
                    <TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_count"></TextView>
                    <EditText android:id="@+id/EditText03" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
                </TableRow>
            </TableLayout>
            <LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
                <Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_add" android:minWidth="12px"></Button>
                <Button android:id="@+id/Button02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_update" android:minWidth="12px"></Button>
                <Button android:id="@+id/Button03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_delete" android:minWidth="12px"></Button>
                <Button android:id="@+id/Button04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="12px" android:text="@string/app_clear"></Button>
            </LinearLayout>
            <Spinner android:id="@+id/Spinner11" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>
            <TableLayout android:id="@+id/TableLayout11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:stretchColumns="1" android:gravity="center">
                <TableRow android:id="@+id/TableRow11" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/TextView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_ID"></TextView>
                    <EditText android:id="@+id/EditText11" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
                </TableRow>
                <TableRow android:id="@+id/TableRow12" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/TextView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_ID1"></TextView>
                    <EditText android:id="@+id/EditText12" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
                </TableRow>
                <TableRow android:id="@+id/TableRow13" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/TextView13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_ID2"></TextView>
                    <EditText android:id="@+id/EditText13" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
                </TableRow>
                <TableRow android:id="@+id/TableRow14" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/TextView14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_count"></TextView>
                    <EditText android:id="@+id/EditText14" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
                </TableRow>
            </TableLayout>
            <LinearLayout android:id="@+id/LinearLayout11" android:layout_height="wrap_content" android:layout_width="fill_parent">
                <Button android:id="@+id/Button11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_add" android:minWidth="12px"></Button>
                <Button android:id="@+id/Button12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_update" android:minWidth="12px"></Button>
                <Button android:id="@+id/Button13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_delete" android:minWidth="12px"></Button>
                <Button android:id="@+id/Button14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="12px" android:text="@string/app_clear"></Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
